# Arclay

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  README_EN.md  THIRD_PARTY_NOTICES.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/: pull_request_template.md
.github/workflows/: build.yml  quality-gates.yml
SKILLs/web-search/: SKILL.md
apps/: ad.md
apps/agent-service/: env.d.ts  package.json  tsconfig.json  vitest.config.ts
apps/desktop/: Cargo.toml  tauri.conf.json
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
config/: permissions.json
docs/: architecture.md  deployment.md  development.md  getting-started.md  testing.md
docs/deployment/: dmg-packaging-fixes.md  (+1 more)
e2e/: COMPLEX_TASKS_TESTING.md  PHASE_STABILITY_TESTING.md  README.md  integration-api-server.mjs  mock-api-server.mjs  playwright.config.ts  playwright.integration.config.ts
scripts/: build-api-binary.sh  check-api-fetch.sh  cleanup.sh  pre-release.mjs  prepare-release-assets.mjs  quality-runner.mjs  run-smoke-with-api.mjs  smoke-desktop.mjs  start.sh  trim-resources-by-platform.mjs  write-build-metadata.mjs
shared-types/: package.json  tsconfig.json
site/: index.html
src/: index.css  tsconfig.json  vite-env.d.ts  vite.config.ts
src-api/: package.json  tsconfig.json  vitest.config.ts
src-tauri/: Cargo.toml  build.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/db/: errors.rs  mod.rs
(+549 files in other folders)
